--- a/regspy.html
+++ b/regspy.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="regespy.css">
+    <link rel="stylesheet" href="regspy.css">
 </head>
 <body>
     <div class="container">
@@ -160,6 +160,6 @@
         </footer>
     </div>
 
-    <script src="regespy.js"></script>
+    <script src="regspy.js"></script>
 </body>
 </html>
